--- a/index.css
+++ b/index.css
@@ -114,7 +114,8 @@ html {
   border: 2rem solid black;
   text-align: center;
   text-decoration: none;
-  font-size: 16rem;
+  line-height: 16rem;
+  font-size: 20rem;
   color: black;
   font-weight: bold;
 }
@@ -132,7 +133,7 @@ html {
   border: 2rem solid black;
   text-align: center;
   text-decoration: none;
-  font-size: 16rem;
+  font-size: 24rem;
   color: black;
   font-weight: bold;
 }
@@ -145,7 +146,7 @@ html {
   border: 2rem solid black;
   text-align: center;
   text-decoration: none;
-  font-size: 16rem;
+  font-size: 24rem;
   color: black;
   font-weight: bold;
 }
